# CPPProgrammingPatterns

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  test-multiplatform.yml
_subfolder_template/: CMakeLists.txt  README.md
_subfolder_template/test/: CMakeLists.txt  test.cpp
auto_raygui/: CMakeLists.txt
auto_raygui/test/: CMakeLists.txt
autoraygui/: CMakeLists.txt
autoraygui/example/: CMakeLists.txt  application_gui_example.cpp  complete_example.cpp
autoraygui/include/autoraygui/: container.hpp  control.hpp  enums.hpp  gui_graph.hpp  gui_tree.hpp  layout.hpp  n_tree.hpp  node.hpp  node_data.hpp
autoraygui/include/std_extensions/: extensions.hpp
autoraygui/source/: container.cpp  gui_graph.cpp  gui_tree.cpp
autoraygui/test/: CMakeLists.txt  control_sandbox.cpp  control_test.cpp  n_tree_test.cpp  sandbox.cpp  test.cpp
ci_cd_test/: CMakeLists.txt  README.md  test.cpp
pub_sub/: CMakeLists.txt
pub_sub/include/koi_pub_sub/: README.md  callable.hpp  server.hpp
pub_sub/include/koi_pub_sub/models/: callable.hpp  data.hpp
pub_sub/include/koi_pub_sub/serialization/: serialization.hpp
pub_sub/source/: callable.cpp  server.cpp
pub_sub/source/models/: callable.cpp
pub_sub/test/: CMakeLists.txt  koi_pub_sub_test.cpp  mock_object.cpp  mock_object.hpp  test.cpp
reflection/: CMakeLists.txt  README.md
reflection/clay-h/: CMakeLists.txt  main.c  main.cpp
reflection/include/koi_object/: object.hpp  string_name.hpp  string_name_registry.hpp  string_names.hpp  variant_reference.hpp
reflection/object_editor_gui/: CMakeLists.txt  main.cpp
reflection/object_editor_gui/include/koi_object_editor/: editor_demo_object.hpp  object_editor.hpp
reflection/object_editor_gui/source/: editor_demo_object.cpp  object_editor.cpp
reflection/raylib-5.5/src/: CMakeLists.txt
reflection/source/: object.cpp  string_name.cpp  string_name_registry.cpp  variant_reference.cpp
reflection/test/: CMakeLists.txt  mock_object.hpp  test.cpp
static_allocators/: CMakeLists.txt  README.md
static_allocators/include/static_allocators/: allocator.h  free_list_allocator.h
static_allocators/source/: free_list_allocator.c
static_allocators/test/: CMakeLists.txt  test.cpp
